--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+.rounded-img {
+  border-radius: 50%;
+}
 * {
   margin: 0;
   padding: 0;
