--- a/style.css
+++ b/style.css
@@ -134,7 +134,17 @@ hr {
   form {
     padding: 15px;
   }
-  .rounded-img {
-  border-radius: 50%;
-  }
+  .img-container {
+      border-radius: 50%;
+      overflow: hidden;
+      width: 200px; /* Adjust the width and height as needed */
+      height: 200px;
+    }
+    
+    .rounded-img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 }
