--- a/style.css
+++ b/style.css
@@ -134,18 +134,7 @@ hr {
   form {
     padding: 15px;
   }
-  .img-container {
-    border-radius: 50%;
-    overflow: hidden;
-    width: 200px; /* Adjust the width and height as needed */
-    height: 200px;
-  }
-  
-  .rounded-img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%; /* Add this line to make the image rounded */
-  }
+  img {
+  border-radius: 50%;
+}
 }
